--- a/environmentcu11torch11.yml
+++ b/environmentcu11torch11.yml
@@ -6,6 +6,7 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
+  - adjusttext=1.3.0=pyhd8ed1ab_0
   - anyio=4.1.0=pyhd8ed1ab_0
   - argon2-cffi=23.1.0=pyhd8ed1ab_0
   - argon2-cffi-bindings=21.2.0=py39hd1e30aa_4
@@ -21,10 +22,10 @@ dependencies:
   - brotli-bin=1.1.0=hd590300_1
   - brotli-python=1.1.0=py39h3d6467e_1
   - bzip2=1.0.8=hd590300_5
-  - ca-certificates=2023.11.17=hbcca054_0
+  - ca-certificates=2025.8.3=hbd8a1cb_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
-  - certifi=2023.11.17=pyhd8ed1ab_0
+  - certifi=2025.8.3=pyhd8ed1ab_0
   - cffi=1.16.0=py39h7a31438_0
   - charset-normalizer=3.3.2=pyhd8ed1ab_0
   - colorama=0.4.6=pyhd8ed1ab_0
@@ -255,4 +256,6 @@ dependencies:
     - astropy-iers-data==0.2023.12.4.0.30.20
     - healpy==1.16.6
     - monty==2023.11.3
+    - pyarrow==20.0.0
     - pyerfa==2.0.1.1
+    - starfile==0.5.12
